--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -27,6 +27,18 @@ input, textarea:focus {
     resize: none;
 }
 
+.no-padding-left {
+    padding-left: 0;
+}
+
+.no-padding-right {
+    padding-right: 0;
+}
+
+.no-padding {
+    padding: 0;
+}
+
 .t-wrap {
     min-height: 100%;
 }
