--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -4,12 +4,26 @@
 .t-index-plttl {
     color: $cfont;
     font-weight: 400;
-    margin-bottom: 20px;
+    margin-top: -4px;
+    margin-bottom: 30px;
     height: 60px;
     font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .t-index-secttl {
+        color: $cbackgroud;
+        padding: 14px;
+        border: 1px solid $cbackgroud;
+        border-top: 0;
+        width: 33.33%;
+    }
+
+    .t-index-secttl-red {
+        color: $cfont-focus;
+        border: 1px solid $cfont-focus;
+    }
 }
 
 .t-index-pltbox {
@@ -31,7 +45,6 @@
 
 .t-index-pht {
     overflow: hidden;
-    padding-top: 1px;
 
     a > img {
         width: 100%;
@@ -72,5 +85,22 @@
 }
 
 .t-index-handicraft {
+    background-color: #8e354a;
+    padding-bottom: 50px;
+
+    .t-index-perhndcrft {
+        overflow: hidden;
+        text-align: center;
+
+        img {
+            width: 100%;
+            max-width: 316px;
+            margin-bottom: 30px;
+            border: 4px solid $cbackgroud;
+        }
+    }
+}
+
+.t-index-note {
     background-color: #8e354a;
 }
