--- a/resources/assets/sass/home/slider.scss
+++ b/resources/assets/sass/home/slider.scss
@@ -1,10 +1,9 @@
 .tar-index-slider {
     background-color: $cwhite;
     width: 100%;
-    height: 540px;
+    height: 527px;
     overflow: hidden;
     margin-top: -20px;
-    margin-bottom: 20px;
 
     ul {
         height: 100%;
@@ -17,7 +16,7 @@
             position: relative;
 
             .t-index-sldtxtbx {
-                width: 30%;
+                width: 26%;
                 height: 100%;
                 display: flex;
                 align-items: center;
@@ -45,11 +44,11 @@
             }
 
             .t-index-sldimg {
-                width: 70%;
+                width: 74%;
                 overflow: hidden;
 
                 img {
-                    width: 100%;
+                    height: 100%;
                 }
             }
         }
