--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -4,8 +4,7 @@
 .t-index-plttl {
     color: $cfont;
     font-weight: 400;
-    margin-top: -4px;
-    margin-bottom: 30px;
+    margin: 30px auto;
     height: 60px;
     font-size: 16px;
     display: flex;
@@ -15,14 +14,11 @@
     .t-index-secttl {
         color: $cbackgroud;
         padding: 14px;
-        border: 1px solid $cbackgroud;
-        border-top: 0;
         width: 33.33%;
     }
 
     .t-index-secttl-red {
         color: $cfont-focus;
-        border: 1px solid $cfont-focus;
     }
 }
 
@@ -48,7 +44,6 @@
 
     a > img {
         width: 100%;
-        min-height: 233px;
     }
 }
 
@@ -86,7 +81,7 @@
 
 .t-index-handicraft {
     background-color: #8e354a;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
 
     .t-index-perhndcrft {
         overflow: hidden;
@@ -95,12 +90,22 @@
         img {
             width: 100%;
             max-width: 316px;
+            min-height: 130px;
             margin-bottom: 30px;
             border: 4px solid $cbackgroud;
         }
     }
 }
 
+.t-index-photo {
+    padding-bottom: 60px;
+
+    img {
+        min-height: 106.5px;
+    }
+}
+
 .t-index-note {
+    padding-bottom: 60px;
     background-color: #8e354a;
 }
