--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -7,16 +7,31 @@
     .t-artl-title {
         border-bottom: 1px solid $cgray-light;
         line-height: 32px;
-        margin-bottom: 16px;
+        margin-bottom: 10px;
 
         > a {
             font-size: 16px;
             font-weight: 400;
+            width: 50%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: inline-block;
+        }
+
+        > .t-artl-date {
+            color: $cgray-base;
         }
     }
 
     .tar-article-extra {
         color: $cgray-base;
+
+        .t-rtcl-tag {
+            max-height: 28px;
+            line-height: 28px;
+            overflow: hidden;
+        }
     }
 
     .tar-article-info {
@@ -26,7 +41,7 @@
     }
 
     .tar-article-list-decs {
-        margin-top: 10px;
+        margin: 10px 0;
         max-height: 190px;
         word-break: break-all;
         word-wrap: break-word;
