--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -2,38 +2,43 @@
     padding-top: 70px;
 }
 
-.t-nav-brand {
-    background: $cwhite url('../../images/logo.png') no-repeat center;
-    background-size: contain;
-}
-
 .navbar-default {
-    .navbar-nav {
-        > .open > .tar-go {
-            &,
-            &:hover,
-            &:focus,
-            &:active,
-            &:visited {
-                color: $cblack;
-                background-color: transparent;
-            }
+    .t-navbar-brand {
+        padding: 10px 0;
+        margin-left: 15px;
+
+        img {
+            height: 100%;
         }
     }
 
-    .t-nav-btn {
-        position: relative;
-        height: 50px;
-        line-height: 56px;
-        margin: auto 15px;
-        background-color: transparent;
+    .navbar-toggle {
+        border: none;
 
-        a {
-            color: $cfont-focus;
+        &:hover,
+        &:focus {
+            background-color: transparent;
         }
 
-        .glyphicon {
-            font-size: 18px;
+        .icon-bar {
+            background-color: $cfont-focus;
         }
     }
+
+    .t-navbar-title {
+        font-size: 16px;
+        font-weight: 400;
+        color: $cfont;
+        position: absolute;
+        margin: 15px 0;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        width: 50%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        display: none;
+    }
+
 }
