--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -34,6 +34,7 @@
             max-width: 100%;
             height: auto;
             margin: 1rem auto;
+            border-radius: $border-radius-small;
 
             &:hover,
             &:active {
