top-bottom-line

--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -57,7 +57,7 @@ input, textarea:focus {
     background-color: $cwhite;
     border: 0;
     border-radius: 0;
-    border-top: solid 1px $cfont-focus;
+    border-top: solid 1px $cgray-light;
     margin: -55px 0 0;
     height: 55px;
     z-index: 1;
