--- a/resources/assets/sass/themes/_navbar.scss
+++ b/resources/assets/sass/themes/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-default {
     background-color: $cwhite;
-    border-bottom: solid 1px $cfont-focus;
+    border-bottom: solid 1px $cgray-light;
     z-index: 2;
 
     .navbar-nav {
