--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -5,21 +5,39 @@
     height: 100vh;
     margin-top: -70px;
 
-    a {
-        max-width: 100%;
-        width: 640px;
-        height: 360px;
-    }
-
-    img {
-        margin-top: 50px;
-        max-width: 100%;
-        width: 640px;
-        height: 360px;
+    .focus-cover {
+        margin-top: 70px;
+        max-width: 98vw;
+        width: 320px;
+        height: 480px;
+        max-height: 70vh;
         color: $cfont;
         border-radius: $border-radius-small;
-        animation: img-show 2s;
-        box-shadow: $box-shadow;
+        box-shadow: 0 0 4px 0 $cgray-base;
+        animation: focus-cover 3s;
+        transition: all 500ms linear;
+
+        img {
+            width: 100%;
+            max-height: 30vh;
+        }
+
+        .title {
+            font-weight: 400;
+            margin-top: 10px;
+        }
+
+        .description {
+            width: 100%;
+            max-height: 40vh;
+            padding: 0 30px 30px;
+            color: $cfont;
+            overflow: hidden;
+        }
+    }
+
+    .focus-cover:hover {
+        box-shadow: 0 0 10px 0 $cgray-base;
     }
 
     .slogan {
@@ -27,15 +45,32 @@
         bottom: 70px;
         right: 30px;
         color: $gray-lighter;
+        cursor: pointer;
+        transition: all 1s linear;
+    }
+
+    .slogan:hover {
+        animation: slogan-show 700ms;
+        color: $cfont;
     }
 }
 
-@keyframes img-show {
+@keyframes focus-cover {
     from {
         opacity: 0;
     }
 
     to {
         opacity: 1;
+    }
+}
+
+@keyframes slogan-show {
+    from {
+        color: $gray-lighter;
+    }
+
+    to {
+        color: $cfont;
     }
 }
