--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -41,4 +41,20 @@
         display: none;
     }
 
+    .t-srch-form > .input-group{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: $max-width;
+
+        > input {
+            border-top-left-radius: $border-radius-small;
+            border-bottom-left-radius: $border-radius-small;
+        }
+
+        .input-group-btn > button {
+            height: 34px;
+            border-top-right-radius: $border-radius-small;
+            border-bottom-right-radius: $border-radius-small;
+        }
+    }
 }
