label&other-style

--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -101,7 +101,7 @@
     border: 1px solid $cfont-focus;
 }
 
-.t-lable {
+.t-form-labels {
     overflow: hidden;
     height: 100px;
     box-shadow: none;
