--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -28,7 +28,7 @@
     .t-navbar-title {
         font-size: 16px;
         font-weight: 400;
-        color: $cfont;
+        color: $cfont-semi;
         position: absolute;
         margin: 15px 0;
         left: 50%;
