--- a/resources/assets/sass/themes/_navbar.scss
+++ b/resources/assets/sass/themes/_navbar.scss
@@ -5,7 +5,7 @@
 
     .navbar-nav {
         > li > a{
-            color: $cfont;
+            color: $cfont-semi;
             font-weight: 400;
             font-size: $sfont-title;;
 
