--- a/resources/assets/sass/themes/_pagination.scss
+++ b/resources/assets/sass/themes/_pagination.scss
@@ -5,7 +5,7 @@
         > a,
         > span {
             font-weight: 400;
-            color: $cfont;
+            color: $cfont-semi;
             border: none;
             background-color: transparent;
         }
