--- a/resources/assets/sass/themes/_panels.scss
+++ b/resources/assets/sass/themes/_panels.scss
@@ -6,7 +6,7 @@
     border: none;
 
     .panel-heading {
-        color: $cfont;
+        color: $cfont-semi;
         font-weight: 700;
         background-color: $cbackgroud;
     }
