--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -3,12 +3,14 @@ $cblack:         #000;
 $cwhite:         #fff;
 $cgray-base:     #ccc;
 $cgray-light:    #f9f9f9;
-$cbackgroud:    #f9f9f9;
-$cfont:         #353535;
-$cfont-focus:   #8e354a;
-$ctag-backgroud:        #d7c4bb;
-$ctag-color:    #8e354a;
-$carticle-btn:  #f6f6f4;
+$cbackgroud:     #f9f9f9;
+$cfont-black:    #000;
+$cfont-semi:     #353535;
+$cfont-grey:     #888;
+$cfont-light:    #b2b2b2;
+$cfont-focus:    #8e354a;
+$ctag-backgroud: #d7c4bb;
+$carticle-btn:   #f6f6f4;
 
 $sfont-title:   16px;
 
