--- a/resources/assets/sass/themes/_normalize.scss
+++ b/resources/assets/sass/themes/_normalize.scss
@@ -1,8 +1,7 @@
 html, body {
     font-family: 苹方-简, "Pingfang SC", 冬青黑体简体中文, HiraginoSansGB, 黑体-简, 微软雅黑, "Helvetica Neue", "Droid Sans", Helvetica, Arial, sans-serif;
-    font-weight: 300;
     line-height: 24px;
-    color: $cfont;
+    color: $cfont-semi;
     height: 100%;
     background-color: $cbackgroud;
 }
@@ -12,7 +11,7 @@ body {
 }
 
 a {
-    color: $cfont;
+    color: $cfont-semi;
 
     &:hover,
     &:focus {
