--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -81,11 +81,13 @@
     overflow: hidden;
     display: none;
     position: fixed;
+    border-radius: $border-radius-small;
 
     img {
         margin: 30px auto;
         max-width: 100%;
         max-height: 98%;
+        border-radius: $border-radius-small;
     }
 }
 
