--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,8 @@
-@import "themes/index";
-@import "common/index";
-@import "table/index";
-@import "home/index";
-@import "sidebar/index";
-@import "article/index";
+// 博客展示样式引入
+
+@import "themes/variables";           // 主题样式值定义
+@import "~bootstrap/scss/bootstrap";  // bootstrap 库
+@import "themes/index";               // 主题定义
+@import "common/index";               // 公共样式
+@import "home/index";                 // 首页样式
+@import "article/index";              // 文章列表及详情样式
