--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -1,7 +1,7 @@
 .home-main {
     display: flex;
     justify-content: center;
-    background-color: $cwhite;
+    background-color: $white;
     height: 100vh;
     margin-top: -70px;
 
