--- a/resources/assets/sass/themes/index.scss
+++ b/resources/assets/sass/themes/index.scss
@@ -1,14 +1,4 @@
-@import "variables";
 @import "normalize";
-@import "type";
-@import "navbar";
-@import "panels";
-@import "scaffolding";
-@import "forms";
-@import "buttons";
-@import "list-group";
-@import "input-groups";
-@import "pagination";
-@import "labels";
+@import "reboot";
 @import "thumbnails";
-@import "alerts";
+@import "variables";
