--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -4,7 +4,7 @@
         box-shadow: $box-shadow;
 
         .simditor-wrapper {
-            background-color: $cwhite;
+            background-color: $white;
         }
 
         .simditor-body {
@@ -13,7 +13,7 @@
             font-size: 14px;
             margin-left: auto;
             margin-right: auto;
-            background-color: $cwhite;
+            background-color: $white;
         }
 
         .markdown-editor {
@@ -22,7 +22,7 @@
             margin-right: auto;
 
             textarea {
-                background-color: $cwhite;
+                background-color: $white;
                 font-size: 14px;
             }
         }
