--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -8,28 +8,20 @@
     word-break: normal;
 }
 
-.tar-article-box {
-    background-color: $cwhite;
+.t-rtcl-box {
+    margin-top: 20px;
+    background-color: $white;
     padding: 30px;
     margin-bottom: 30px;
 
-    .t-rtcl-ttl {
-        margin-bottom: 20px;
-        font-weight: 400;
-        font-size: $sfont-title;
-    }
-
-    .tar-article-time {
-        color: $cgray-base;
-        margin-bottom: 8px;
-    }
-
-    .article-content,
+    .t-rtcl-content,
     .t-rtcl-tags {
         @include content-common;
+
+        margin-bottom: 15px;
     }
 
-    .article-content {
+    .t-rtcl-content {
         img {
             max-width: 100%;
             height: auto;
@@ -43,27 +35,12 @@
         }
     }
 
-    .t-rtcl-tags {
-        margin-bottom: 15px;
-    }
-
     footer {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
         max-width: $max-width;
         color: $cgray-base;
-    }
-
-    .cloud-tie-wrapper {
-        max-width: 750px;
-        margin-left: auto;
-        margin-right: auto;
-        border-top: 2px solid $cgray-base;
-
-        #yun-tie-sdk-wrap {
-            padding: 0;
-        }
     }
 }
 
@@ -90,4 +67,3 @@
         border-radius: $border-radius-small;
     }
 }
-
