--- a/resources/assets/sass/lib.scss
+++ b/resources/assets/sass/lib.scss
@@ -1,2 +1,3 @@
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../../../node_modules/tar-simditor/styles/simditor.scss";
+// 第三方库样式引入
+
+@import "~tar-simditor/styles/simditor.scss";
