--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -1,50 +1,3 @@
 // 公共样式定义及引入
-
-.t-main {
-    min-height: 100%;
-}
-
-.no-resize {
-    resize: none;
-}
-
-.no-padding-left {
-    padding-left: 0;
-}
-
-.no-padding {
-    padding: 0;
-}
-
-.t-index-ftr {
-    background-color: $white;
-    border: 0;
-    border-radius: 0;
-    border-top: solid 1px $cgray-light;
-    height: 55px;
-    z-index: 1;
-}
-
-.t-overflowy-hidden {
-    overflow-y: hidden;
-}
-
-.t-line-ellipsis {
-  overflow: hidden;
-  text-overflow:ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-
-.t-line-ellipsis-1 {
-    overflow: hidden;
-    text-overflow:ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-}
-
-@import "dialog";
-@import "simditor";
-@import "nav";
+@import "variables"; // 自定义公共常量
+@import "common";
