--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -26,7 +26,7 @@
             max-width: 100%;
             height: auto;
             margin: 1rem auto;
-            border-radius: $border-radius-small;
+            border-radius: $border-radius-sm;
 
             &:hover,
             &:active {
@@ -40,7 +40,7 @@
         margin-left: auto;
         margin-right: auto;
         max-width: $max-width;
-        color: $cgray-base;
+        color: $gray-400;
     }
 }
 
@@ -58,12 +58,12 @@
     overflow: hidden;
     display: none;
     position: fixed;
-    border-radius: $border-radius-small;
+    border-radius: $border-radius-sm;
 
     img {
         margin: 30px auto;
         max-width: 100%;
         max-height: 98%;
-        border-radius: $border-radius-small;
+        border-radius: $border-radius-sm;
     }
 }
