--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,3 +6,4 @@
 @import "common/index";               // 自定义公共 class
 @import "home/index";                 // 首页样式
 @import "article/index";              // 文章列表及详情样式
+@import "auth/index";                 // 登录及注册页样式
