--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -41,7 +41,7 @@
     min-height: 80%;
     position: absolute;
     color: $white;
-    font-size: $font-size-sm;
+    font-size: $font-size-sm * 0.9;
 
     svg {
       margin-right: 0.125rem;
