--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -1,45 +1,45 @@
 .t-index-carousel {
   margin-top: 30px;
   box-shadow: $box-shadow-sm;
+
+  .t-index-carousel-blockquote {
+    background-color: #ffffffaa;
+    position: absolute;
+    bottom: 2.5rem;
+    padding: 0 1rem 0.75rem;
+  }
 }
 
 .t-index-right {
-  min-height: calc(100% + 4px);
+  height: 100vh;
   z-index: 1021;
   margin-top: -1px;
   margin-bottom: -1px;
+  position: sticky;
+  top: 0;
 }
 
 .t-index-intro {
-  min-height: 100%;
+  height: 100%;
   background-color: $white;
-  box-shadow: 0 .25rem .25rem rgba($black, .075);
-  position: relative;
+  box-shadow: 0 0.25rem 0.25rem rgba($black, 0.075);
+  display: flex;
+  flex-direction: column;
 
   .t-index-avatar {
-    top: 0;
-    left: 0;
-    right: 0;
-    min-height: 20%;
-    position: absolute;
+    height: 128px;
+    display: flex;
+    align-items: center;
 
     img {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      position: absolute;
-      max-height: 50%;
-      max-width: 50%;
+      width: 60px;
+      height: 60px;
     }
   }
 
   .t-index-social {
     background-color: $dark;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    min-height: 80%;
-    position: absolute;
+    height: calc(100% - 128px);
     color: $white;
     font-size: $font-size-sm * 0.9;
 
@@ -53,7 +53,7 @@
     }
 
     .icon-gitee {
-      color: #C6262B;
+      color: #c6262b;
     }
   }
 }
