--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -2,10 +2,10 @@
   margin-top: 30px;
   box-shadow: $box-shadow-sm;
 
-  .t-index-carousel-blockquote {
+  .t-index-carousel-title {
     background-color: #ffffffaa;
     position: absolute;
-    bottom: 2.5rem;
+    bottom: 3.5rem;
     padding: 0 1rem 0.75rem;
   }
 }
