--- a/resources/assets/sass/lib.scss
+++ b/resources/assets/sass/lib.scss
@@ -1,6 +1,1 @@
-// 第三方库样式引入
-
-@import "~tui-editor/dist/tui-editor.css"; // editor's ui
-@import "~tui-editor/dist/tui-editor-contents.css"; // editor's content
-@import "~codemirror/lib/codemirror.css"; // codemirror
-@import "~highlight.js/styles/github.css"; // code block highlight
+// 第三方库全局样式引入
