img center align

--- a/resources/assets/sass/themes/tui-editor/_tui-editor-contents.scss
+++ b/resources/assets/sass/themes/tui-editor/_tui-editor-contents.scss
@@ -125,10 +125,10 @@
 }
 
 .tui-editor-contents img {
-    margin: 4px 0 10px;
+    margin: 1rem auto;
     box-sizing: border-box;
-    vertical-align: top;
     max-width: 100%;
+    display: block;
 }
 
 .tui-editor-contents table {
