--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -16,6 +16,7 @@
     overflow-y: auto;
     outline: 0;
     padding: 0.2rem 0;
+    width: 750px;
 }
 
 .tar-artl-title:focus {
@@ -44,8 +45,32 @@
     margin-bottom: 1rem;
 }
 
-.t-editor-form-group {
-    min-height: 600px;
+.t-edit-area {
+    display: flex;
+    position: relative;
+    width: 1110px;
+
+    > .t-editor-form-group {
+        > .t-editor {
+            width: 808px;
+            margin-right: 1rem;
+        }
+
+        > .t-editor > .tui-editor-defaultUI > .te-toolbar-section {
+            position: sticky;
+            top: 0;
+            z-index: 3;
+        }
+    }
+
+    > .t-editor-card {
+        position: sticky;
+        top: 0;
+        z-index: 3;
+        margin-bottom: 1rem;
+        height: calc(100vh - 2rem);
+        min-height: 620px;
+    }
 }
 
 .t-edit-cover {
@@ -89,6 +114,7 @@
     min-height: 1rem;
     box-shadow: none;
     border-radius: 0;
+    height: auto;
 
     .t-tag-input {
         border: none;
