--- a/resources/assets/sass/themes/variables.scss
+++ b/resources/assets/sass/themes/variables.scss
@@ -2,7 +2,7 @@ $border-radius-sm: 1px;
 $border-radius: 2px;
 $primary: #8e354a !default;
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$body-bg: #f9f9f9;
+$body-bg: #fff;
 $black: #000 !default;
 $box-shadow-sm: 0 0 0.025rem 0.025rem rgba($black, 0.075) !default;
 $box-shadow: 0 0 0.05rem 0.05rem rgba($black, 0.15) !default;
