--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -20,6 +20,7 @@
         max-width: $max-width;
         margin-left: auto;
         margin-right: auto;
+        font-weight: 300;
     }
 
     .t-rtcl-content,
