--- a/resources/assets/sass/themes/variables.scss
+++ b/resources/assets/sass/themes/variables.scss
@@ -1,6 +1,6 @@
 $border-radius-sm: 1px;
 $border-radius: 2px;
-$primary: #8e354a !default;
+$primary: #E80B26 !default;
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
 $body-bg: #fff;
 $black: #000 !default;
