--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -1,25 +1,32 @@
+html,body {
+    font-size: 16px;
+}
+
 @layer base {
+    html,body {
+        @apply text-gray-700;
+    }
     h1 {
-        @apply text-4xl;
+        @apply text-3xl font-medium text-gray-800;
     }
 
     h2 {
-        @apply text-3xl
+        @apply text-3xl font-medium text-gray-800;
     }
 
     h3 {
-        @apply text-2xl
+        @apply text-xl font-medium text-gray-800;
     }
 
     h4 {
-        @apply text-xl
+        @apply text-base font-medium text-gray-800;
     }
 
     h5 {
-
+        @apply text-base font-medium text-gray-600;
     }
 
     h6 {
-
+        @apply text-sm font-medium text-gray-600;
     }
 }
